--- a/app/scss/_feature.scss
+++ b/app/scss/_feature.scss
@@ -68,21 +68,26 @@
     }
 
     &__title {
-        font-size: $font-xl;
+        font-size: $font-lg;
         font-weight: 400;
         line-height: 1.15;
         color: $veryLightGray;
         margin-bottom: 1rem;
 
-        @include breakpoint-up(large) {
+        @include breakpoint-up(medium) {
+            font-size: $font-xl;
             font-size: 1.5rem;
             margin-bottom: 1.5rem;
         }
     }
 
     &__description {
-        font-size: $font-lg;
+        font-size: $font-sm;
         line-height: 1;
         color: $veryLightGray;
+
+        @include breakpoint-up(medium) {
+            font-size: $font-lg;
+        }
     }
 }
